# shanghai-earth-wallpaper

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily-storage-cleanup.yml  hourly-wallpaper.yml  hourly-watchdog.yml
cloudflare/: wrangler.jsonc
cloudflare/src/: index.mjs
cloudflare/test/: index.test.mjs
deploy/: earthwall-location.service  earthwall-render.service  earthwall-render.timer  nginx-earthwall-site.conf  nginx-earthwall.conf
docs/: aliyun-scheduler.md  cloudflare-scheduler.md  iphone-shortcut.md
docs/superpowers/plans/: 2026-07-13-shanghai-earth-wallpapers.md
macos/: EarthwallScreenSaver-Info.plist  EarthwallScreenSaverView.m
output/current/: manifest.json
scripts/: aliyun-hourly-trigger.sh  build-shortcut.sh  cleanup_github_storage.py  hourly.sh  install-mac-wallpaper.sh  mac-hourly.sh  verify-shortcut.sh
shortcuts/: 更新上海实时地球.plist
src/earthwall/: __init__.py  cli.py  config.py  geometry.py  lighting.py  location.py  location_api.py  mac_cli.py  mac_lock.py  mac_qa.py  publisher.py  qa.py  render.py  sources.py  style.py
tests/: test_core.py  test_location_api.py  test_mac_contract.py  test_mac_lock.py  test_publisher.py  test_shortcut.py  test_storage_cleanup.py  test_workflow_contract.py
web/: index.html  更新上海实时地球.shortcut
